--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ layout: default
     </div>
   </div>
   <div class="col-md-4">
+    <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=hildebertocom" id="_carbonads_js"></script>
+    <br>    
     {% assign reviewed = site.data.books[0] %}
     <div class="panel panel-default">
       <div class="panel-heading">
