--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@ layout: default
         <h3 class="panel-title">What I'm Reading</h3>
       </div>
       <div class="panel-body">
-        <h3><a href="books">{{ reviewed.title }}</a> <small>by {{ reviewed.author }}</small></h3>
+        <h3>{{ reviewed.title }} <small>by {{ reviewed.author }}</small></h3>
         <img align="left" border="0" style="margin-right: 10px;" width="90" src="{{ reviewed.image }}" >
         <p>{{ reviewed.description }}</p>
+      </div>
+      <div class="panel-footer">
+        <a href="books">Read previous book reviews</a>
       </div>
     </div>
 
