Publishing most recent book review

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     <br>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">What I'm Reading</h3>
+        <h3 class="panel-title">Latest Book Review</h3>
       </div>
       <div class="panel-body">
         <div id="reads"></div>
