--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ layout: default
     <br>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title">Latest Book Review</h3>
+        <h3 class="panel-title">Book Reviews</h3>
       </div>
       <div class="panel-body">
         <div id="reads"></div>
       </div>
       <div class="panel-footer">
-        <a href="books">Read previous book reviews</a>
+        <a href="books">More book reviews</a>
       </div>
     </div>
 
